tests/snapshots/migrated_v1_trace__brew_install_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                         command │ brew install foo
                                          parser │ gnu  flags permute
  74: (rule (command "brew")                     │
        (args                                    │
         (cond                                   │
          ((positional "install")                │ "install" = "install" → yes
           (deny                                 │ → :deny "Package installation not allowed"
            "Package installation not allowed")) │
          …)))                                   │

Result

  brew install foo

  → :deny "Package installation not allowed"

  config: <config-path>
