tests/snapshots/migrated_v1_trace__brew_list_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                               command │ brew list
                                parser │ gnu
  74: (rule (command "brew")           │
        (args (cond                    │
               ((positional "install") │ "list" = "install" → no
                …)                     │
               ((positional            │
                 (or "list" "search")) │ "list" = "list" → yes
                (effect :allow)))))    │ → :allow

Result

  brew list

  → :allow

  config: <config-path>
