tests/snapshots/migrated_v1_trace__cargo_affected_build_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                  command │ cargo affected build
                                   parser │ gnu  flags permute
  95: (rule (command "cargo")             │
        (args (if (exact)                 │
                  …                       │
                (positional               │
                 (? "affected")           │ "affected" = "affected" → yes
                 (?                       │
                  (or "watch" "run" "r")) │ "affected" = "watch" → no
                 (? "--")                 │ "affected" = "--" → no
                 (cond                    │
                  ((or "install"          │
                       "uninstall")       │
                   (deny))                │
                  ((or "build"            │
                       "b"                │
                       …                  │
                       "clippy")          │
                   (allow)))              │ → :allow
                 (allow)))))              │

Result

  cargo affected build

  → :allow

  config: <config-path>
