tests/snapshots/migrated_v1_trace__cargo_build_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                  command │ cargo build
                                   parser │ gnu
  95: (rule (command "cargo")             │
        (args (if (exact)                 │
                  …                       │
                (positional               │
                 (? "affected")           │
                 (?                       │
                  (or "watch" "run" "r")) │
                 (? "--")                 │
                 (cond                    │
                  ((or "install"          │
                       "uninstall")       │
                   (deny))                │
                  ((or "build"            │
                       "b"                │
                       …                  │
                       "clippy")          │
                   (allow)))              │ → :allow
                 (effect :allow)))))      │

Result

  cargo build

  → :allow

  config: <config-path>
