tests/snapshots/migrated_v1_trace__cargo_flags_only_raw.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

[1mTrace[0m

                      [2mcommand[0m [2m│[0m [1mcargo --list[0m
                       [2mparser[0m [2m│[0m gnu  flags permute
  [2m95: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"cargo"[0m[2m)[0m [2m│[0m
        [2m([0m[34margs[0m [2m([0m[34mif[0m [2m([0m[34mexact[0m[2m)[0m     [2m│[0m
                  [2m([0mallow[2m)[0m     [2m│[0m [2m[0m[2m→[0m [1;32m:allow[0m
                [2m…[0m[2m)[0m[2m)[0m[2m)[0m          [2m│[0m

[1mResult[0m

  [4;32mcargo --list[0m

  [2m→[0m [1;32m:allow[0m

  config: <config-path>
