tests/snapshots/migrated_v1_trace__cargo_flags_only_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                          command │ cargo --list
                           parser │ gnu
  95: (rule (command "cargo")     │
        (args (if (exact)         │
                  (effect :allow) │ → :allow
                …)))              │

Result

  cargo --list

  → :allow

  config: <config-path>
