tests/snapshots/migrated_v1_trace__cargo_install_stripped.snap
---
source: tests/migrated_v1_trace.rs
expression: normalised
---

Trace

                                  command │ cargo install foo
                                   parser │ gnu  flags permute
  95: (rule (command "cargo")             │
        (args (if (exact)                 │
                  …                       │
                (positional               │
                 (? "affected")           │
                 (?                       │
                  (or "watch" "run" "r")) │
                 (? "--")                 │
                 (cond                    │
                  ((or "install"          │
                       "uninstall")       │
                   (deny))                │ → :deny
                  ((or "build"            │
                       "b"                │
                       …                  │
                       "clippy")          │
                   (allow)))              │
                 (deny)))))               │

Result

  cargo install foo

  → :deny

  config: <config-path>
